Bug 457452 - "Leaking nsAutoSyncManager on shutdown" [r=Standard8,sr=bienvenu]